Update ZGC handling note in README
Clarify ZGC handling in the README